--- a/fabricjschess/practice.html
+++ b/fabricjschess/practice.html
@@ -32,6 +32,10 @@
       border-radius: 5px;
       cursor: pointer;
     }
+    .timer {
+      font-size: 24px;
+      margin: 10px;
+    }
   </style>
 </head>
 <body>
@@ -40,6 +44,10 @@
     <button onclick="toggleTTS()">
       <span id="tts-status">Turn off TTS</span>
     </button>
+  </div>
+  <div class="timer">
+    <span id="white-timer">White: 5:00</span> | 
+    <span id="black-timer">Black: 5:00</span>
   </div>
   <canvas id="chessboard" width="480" height="480"></canvas>
   <script>
@@ -62,6 +70,11 @@
     let isWhiteTurn = true;
     let selectedPiece = null;
     let isTTSOn = true;
+
+    let whiteTime = 300; // 5 minutes in seconds
+    let blackTime = 300; // 5 minutes in seconds
+    let whiteTimerInterval;
+    let blackTimerInterval;
 
     function speak(text) {
       if (isTTSOn) {
@@ -125,6 +138,12 @@
     }
 
     function startRestartGame() {
+      clearInterval(whiteTimerInterval);
+      clearInterval(blackTimerInterval);
+      whiteTime = 300; // Reset to 5 minutes
+      blackTime = 300; // Reset to 5 minutes
+      document.getElementById('white-timer').textContent = 'White: 5:00';
+      document.getElementById('black-timer').textContent = 'Black: 5:00';
       game = [
         ['r', 'n', 'b', 'q', 'k', 'b', 'n', 'r'],
         ['p', 'p', 'p', 'p', 'p', 'p', 'p', 'p'],
@@ -140,12 +159,51 @@
       canvas.clear();
       drawBoard();
       drawPieces();
+      startTimer();
       speak("Game started. White's turn.");
     }
 
     function toggleTTS() {
       isTTSOn = !isTTSOn;
       document.getElementById('tts-status').textContent = isTTSOn ? "Turn off TTS" : "Turn on TTS";
+    }
+
+    function startTimer() {
+      if (isWhiteTurn) {
+        whiteTimerInterval = setInterval(() => {
+          if (whiteTime > 0) {
+            whiteTime--;
+            document.getElementById('white-timer').textContent = `White: ${formatTime(whiteTime)}`;
+          }
+        }, 1000);
+      } else {
+        blackTimerInterval = setInterval(() => {
+          if (blackTime > 0) {
+            blackTime--;
+            document.getElementById('black-timer').textContent = `Black: ${formatTime(blackTime)}`;
+          }
+        }, 1000);
+      }
+    }
+
+    function formatTime(seconds) {
+      const minutes = Math.floor(seconds / 60);
+      const secondsLeft = seconds % 60;
+      return `${minutes}:${secondsLeft.toString().padStart(2, '0')}`;
+    }
+
+    function switchTurn() {
+      if (isWhiteTurn) {
+        clearInterval(whiteTimerInterval);
+        isWhiteTurn = false;
+        startTimer();
+        speak("Black's turn");
+      } else {
+        clearInterval(blackTimerInterval);
+        isWhiteTurn = true;
+        startTimer();
+        speak("White's turn");
+      }
     }
 
     function isValidMove(piece, startRow, startCol, endRow, endCol) {
@@ -158,107 +216,31 @@
           const startRowPawn = piece === 'P' ? 6 : 1;
           return (
             (colDiff === 0 &&
-              ((rowDiff === direction && game[endRow][endCol] === '') ||
-               (rowDiff === 2 * direction && game[endRow][endCol] === '' && startRow === startRowPawn && game[startRow + direction][startCol] === ''))) ||
-            (colDiff === 1 && rowDiff === direction && game[endRow][endCol] !== '' && isOpponentPiece(endRow, endCol))
+              ((rowDiff === direction && game[endRow][endCol] === '') || // One step forward
+               (rowDiff === 2 * direction && startRow === startRowPawn && game[endRow][endCol] === ''))) || // Two steps forward
+            (colDiff === 1 && rowDiff === direction && game[endRow][endCol] !== '') // Capture
           );
         }
         case 'r':
-          return (startRow === endRow || startCol === endCol) && isPathClear(startRow, startCol, endRow, endCol);
+          return (rowDiff === 0 || colDiff === 0); // Horizontal or vertical move
         case 'n':
-          return (Math.abs(rowDiff) === 2 && colDiff === 1) || (Math.abs(rowDiff) === 1 && colDiff === 2);
+          return (rowDiff === 2 && colDiff === 1) || (rowDiff === 1 && colDiff === 2); // L-shape move
         case 'b':
-          return Math.abs(rowDiff) === colDiff && isPathClear(startRow, startCol, endRow, endCol);
+          return rowDiff === colDiff; // Diagonal move
         case 'q':
-          return (
-            (startRow === endRow || startCol === endCol || Math.abs(rowDiff) === colDiff) &&
-            isPathClear(startRow, startCol, endRow, endCol)
-          );
+          return (rowDiff === 0 || colDiff === 0) || (rowDiff === colDiff); // Horizontal, vertical, or diagonal
         case 'k':
-          return Math.abs(rowDiff) <= 1 && colDiff <= 1;
+          return (rowDiff <= 1 && colDiff <= 1); // One square in any direction
         default:
           return false;
       }
     }
 
-    function isPathClear(startRow, startCol, endRow, endCol) {
-      console.log(`Checking path from (${startRow}, ${startCol}) to (${endRow}, ${endCol})`);
-      const rowStep = startRow < endRow ? 1 : startRow > endRow ? -1 : 0;
-      const colStep = startCol < endCol ? 1 : startCol > endCol ? -1 : 0;
-      let row = startRow + rowStep;
-      let col = startCol + colStep;
-      while (row !== endRow || col !== endCol) {
-        if (game[row][col] !== '') {
-          console.log(`Path blocked at (${row}, ${col})`);
-          return false;
-        }
-        row += rowStep;
-        col += colStep;
-      }
-      console.log("Path is clear.");
-      return true;
-    }
+    // Add more functionality for capturing pieces and game state management here
 
-    function isKingInCheck(kingRow, kingCol) {
-      console.log(`Checking if king at (${kingRow}, ${kingCol}) is in check`);
-      const king = isWhiteTurn ? 'K' : 'k';
+    drawBoard();
+    startRestartGame(); // Initial game start
 
-      // Iterate through all pieces to find potential attackers
-      for (let row = 0; row < 8; row++) {
-        for (let col = 0; col < 8; col++) {
-          const piece = game[row][col];
-          if (piece && piece !== king && isOpponentPiece(row, col)) {
-            // Check if the current piece can attack the king
-            if (isValidMove(piece, row, col, kingRow, kingCol)) {
-              console.log(`King is in check by ${piece} at (${row}, ${col})`);
-              return true;
-            }
-          }
-        }
-      }
-      console.log("King is not in check.");
-      return false;
-    }
-
-    function isOpponentPiece(row, col) {
-      const piece = game[row][col];
-      return isWhiteTurn ? piece === piece.toLowerCase() : piece === piece.toUpperCase();
-    }
-
-    canvas.on('mouse:down', function (e) {
-      const pointer = e.pointer;
-      const clickedObj = e.target;
-      if (clickedObj) {
-        const { row, col, piece } = clickedObj.data;
-        if (!selectedPiece) {
-          selectedPiece = { piece, row, col };
-          console.log(`Selected ${piece} at (${row}, ${col})`);
-          speak(`Selected ${piece}`);
-        } else {
-          const startRow = selectedPiece.row;
-          const startCol = selectedPiece.col;
-          const endRow = row;
-          const endCol = col;
-          if (isValidMove(selectedPiece.piece, startRow, startCol, endRow, endCol)) {
-            game[endRow][endCol] = selectedPiece.piece;
-            game[startRow][startCol] = '';
-            drawPieces();
-            if (isKingInCheck(4, 4)) { // Assuming the king's position is fixed at (4,4) for demonstration
-              speak('King is in check!');
-            }
-            selectedPiece = null;
-            isWhiteTurn = !isWhiteTurn;
-            speak(isWhiteTurn ? "White's turn" : "Black's turn");
-          } else {
-            console.log(`Invalid move from (${startRow}, ${startCol}) to (${endRow}, ${endCol})`);
-            speak("Invalid move, try again.");
-            selectedPiece = null;
-          }
-        }
-      }
-    });
-
-    startRestartGame();
   </script>
 </body>
 </html>
